--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "mapbox-gl": "^2.3.0",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
